Fix scrollbar styling

--- a/client/src/style/_config.scss
+++ b/client/src/style/_config.scss
@@ -181,3 +181,8 @@ $input-error: #dc3545;
 
 /* TextField Config */
 $soft-black: #333333;
+
+
+/* ScrollWindow Config */
+$scroll-bar-color: #C4C4C4;
+$scroll-window-border: 1px solid #D7D7D7;
